Port Forge platform layer and retarget mixins to Forge 47 / 1.20.1
Replace the NeoForge 21 platform layer with a Forge 47 one: entrypoints,
event platform, registration (based on the 1.20 branch's
ForgeRegistrationFactory), pack resources and the payload-per-channel
packet manager. Retarget LevelRenderer, GameRenderer and other mixins to
their 1.20.1 descriptors and drop mixins whose targets don't exist on
1.20.1 (PNG header validation, registry directory layout).

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_015FqC5gTAKLojiRgYWcW2SR