@@ -1,33 +1,34 @@
 package foundry.veil.forge.impl;
 
 import com.google.common.collect.ImmutableList;
-import com.mojang.blaze3d.vertex.ByteBufferBuilder;
 import foundry.veil.Veil;
 import foundry.veil.api.client.render.VeilLevelPerspectiveRenderer;
 import foundry.veil.api.client.render.VeilRenderSystem;
 import foundry.veil.api.client.render.rendertype.VeilRenderType;
 import foundry.veil.api.event.VeilRenderLevelStageEvent;
 import foundry.veil.ext.LevelRendererBlockLayerExtension;
-import foundry.veil.forge.platform.NeoForgeVeilEventPlatform;
+import foundry.veil.forge.platform.ForgeVeilEventPlatform;
+import foundry.veil.forge.mixin.client.ForgeRenderTypeAccessor;
 import foundry.veil.mixin.rendertype.accessor.RenderTypeBufferSourceAccessor;
+import com.mojang.blaze3d.vertex.BufferBuilder;
 import it.unimi.dsi.fastutil.objects.ObjectArraySet;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.renderer.MultiBufferSource;
 import net.minecraft.client.renderer.RenderType;
 import net.minecraft.util.profiling.ProfilerFiller;
 import net.minecraft.world.phys.Vec3;
-import net.neoforged.api.distmarker.Dist;
-import net.neoforged.bus.api.EventPriority;
-import net.neoforged.bus.api.SubscribeEvent;
-import net.neoforged.fml.common.EventBusSubscriber;
-import net.neoforged.neoforge.client.event.RenderLevelStageEvent;
+import net.minecraftforge.api.distmarker.Dist;
+import net.minecraftforge.eventbus.api.EventPriority;
+import net.minecraftforge.eventbus.api.SubscribeEvent;
+import net.minecraftforge.fml.common.Mod;
+import net.minecraftforge.client.event.RenderLevelStageEvent;
 import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
 
 @ApiStatus.Internal
-@EventBusSubscriber(modid = Veil.MODID, value = Dist.CLIENT)
+@Mod.EventBusSubscriber(modid = Veil.MODID, value = Dist.CLIENT, bus = Mod.EventBusSubscriber.Bus.FORGE)
 public class ForgeRenderTypeStageHandler {
 
     private static final Map<RenderLevelStageEvent.Stage, Set<RenderType>> STAGE_RENDER_TYPES = new HashMap<>();
@@ -35,11 +36,8 @@ public class ForgeRenderTypeStageHandler {
     private static List<RenderType> BLOCK_LAYERS;
 
     public static synchronized void register(@Nullable RenderLevelStageEvent.Stage stage, RenderType renderType) {
-        SequencedMap<RenderType, ByteBufferBuilder> fixedBuffers = ((RenderTypeBufferSourceAccessor) Minecraft.getInstance().renderBuffers().bufferSource()).getFixedBuffers();
-        ByteBufferBuilder old = fixedBuffers.put(renderType, new ByteBufferBuilder(renderType.bufferSize()));
-        if (old != null) {
-            old.close();
-        }
+        Map<RenderType, BufferBuilder> fixedBuffers = ((RenderTypeBufferSourceAccessor) Minecraft.getInstance().renderBuffers().bufferSource()).getFixedBuffers();
+        fixedBuffers.put(renderType, new BufferBuilder(renderType.bufferSize()));
 
         if (stage != null) {
             STAGE_RENDER_TYPES.computeIfAbsent(stage, unused -> new ObjectArraySet<>()).add(renderType);
@@ -58,7 +56,7 @@ public class ForgeRenderTypeStageHandler {
                 profiler.push("render_" + VeilRenderType.getName(renderType));
                 if (CUSTOM_BLOCK_LAYERS.contains(renderType)) {
                     Vec3 pos = event.getCamera().getPosition();
-                    ((LevelRendererBlockLayerExtension) event.getLevelRenderer()).veil$drawBlockLayer(renderType, pos.x, pos.y, pos.z, event.getModelViewMatrix(), event.getProjectionMatrix());
+                    ((LevelRendererBlockLayerExtension) event.getLevelRenderer()).veil$drawBlockLayer(renderType, pos.x, pos.y, pos.z, event.getPoseStack().last().pose(), event.getProjectionMatrix());
                 }
                 bufferSource.endBatch(renderType);
                 profiler.pop();
@@ -66,7 +64,7 @@ public class ForgeRenderTypeStageHandler {
         }
 
         if (!VeilLevelPerspectiveRenderer.isRenderingPerspective()) {
-            VeilRenderLevelStageEvent.Stage veilStage = NeoForgeVeilEventPlatform.getVeilStage(stage);
+            VeilRenderLevelStageEvent.Stage veilStage = ForgeVeilEventPlatform.getVeilStage(stage);
             if (veilStage != null) {
                 profiler.push("post");
                 VeilRenderSystem.renderPost(veilStage);
@@ -87,10 +85,10 @@ public class ForgeRenderTypeStageHandler {
             if (CUSTOM_BLOCK_LAYERS != null) {
                 blockLayers.addAll(CUSTOM_BLOCK_LAYERS);
 
-                // Assign NeoForge chunk layer ids
-                int i = base.getLast().chunkLayerId;
+                // Assign Forge chunk layer ids
+                int i = base.get(base.size() - 1).getChunkLayerId();
                 for (RenderType blockLayer : CUSTOM_BLOCK_LAYERS) {
-                    blockLayer.chunkLayerId = ++i;
+                    ((ForgeRenderTypeAccessor) blockLayer).veil$setChunkLayerId(++i);
                 }
             }
             BLOCK_LAYERS = blockLayers.build();
